Project1-main/Project1-main/DeltaProject1/force-app/main/default/objects/Customer__c/fields/Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary__c</fullName>
    <label>Annual Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>