Project1-main/Project1-main/DeltaProject1/force-app/main/default/objects/Customer__c/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <label>Company Phone #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>