Project1-main/Project1-main/DeltaProject1/force-app/main/default/objects/Customer__c/fields/Estimated_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Down_Payment__c</fullName>
    <label>Estimated Down Payment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>